Rename conflicting fields and detect remote services